--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ repositories {
 dependencies {
     testImplementation ('org.junit.jupiter:junit-jupiter:5.8.1',
             'com.codeborne:selenide:7.2.2',
-            'org.assertj:assertj-core:3.25.3'
+            'org.assertj:assertj-core:3.25.3',
+            'com.codeborne:pdf-test:1.8.1',
+            'com.codeborne:xls-test:1.6.0'
     )
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
